# Trabalho-de-Grafos

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  saidaaaaaa.txt
Parte-01/: Makefile  README.md  main.cpp
Parte-01/include/: Edge.hpp  GraphOperations.hpp
Parte-01/instances_example/: README.md
Parte-01/source/: Graph.cpp
Parte-01/test/: testGraph.cpp  testUndirected.cpp
Parte-02/: Makefile  README.md  execAll.sh  main.cpp
Parte-02/include/: Edge.hpp  Graph.hpp  GraphPartitioning.hpp  Node.hpp  SubGraph.hpp  defines.hpp
Parte-02/instances_example/: README.md
Parte-02/source/: Graph.cpp  GraphPartitioning.cpp  SubGraph.cpp
include/: Edge.hpp  Graph.hpp  GraphOperations.hpp  Node.hpp  defines.hpp
instances_example/: README.md
source/: Graph.cpp  GraphOperations.cpp
test/: testDirected.cpp  testGraph.cpp  testGraphOperations.cpp  testUndirected.cpp
